--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <div class="header-item">
             <div class="nav">
                 <ul class="list">
-                    <li>УСЛУГИ</li>
-                    <li>КОНСУЛЬТАЦИЯ</li>
-                    <li>ОТЗЫВЫ</li>
+                    <li><a href="#uslugi">УСЛУГИ</a></li>
+                    <li><a href="#faq">КОНСУЛЬТАЦИЯ</a></li>
+                    <li><a href="#reviews">ОТЗЫВЫ</a></li>
                 </ul>
             </div>
 
             <div class="callback">
                 <div class="">
                 <p class="number">8 989 454 07 92</p>
-                <p class="mail">islam146290@gmail.com</p>
+                <a class="mail" type="mail" href="islam146290@gmail.com" target="_blank">islam146290@gmail.com</a>
                 </div>
-                <button class="greenb">Перезвоните мне</button>
+                <button class="greenb"><a href="#contact">Перезвоните мне</a></button>
             </div>
         </div>
         <div class="burger ">
@@ -48,7 +48,7 @@
                     <p style="color: #2DBF60; font-weight: 700;">СКИДКА</p>
                     <p class="cardcontentname">Лендинг</p>
                     <div class="greenline"></div>
-                    <p class="sale">14 999 ₽\20 000 ₽</p>
+                    <p class="sale">14 999 ₽\<span class="oldsale">20 000 ₽</span></p>
                     <button class="cardbut">Подробнее</button>
                     <p style="color: #909090; font-size: 13px; font-weight: 400;">Получайте прибыль от продвижения конкретных услуг или товаров на одной странице</p>
                 </div>
@@ -66,7 +66,7 @@
         </div>
     </section>
 
-    <section class="example global">
+    <section class="example global" id="uslugi">
         <h1 class="bigtitle">Делаем сайты для любой нишы</h1>
         <div class="examplecardwrapp">
             <div class="excard">
@@ -100,7 +100,7 @@
         <button class="greenb center">Заказать сайт</button>
     </section>
 
-    <section class="global">
+    <section class="global" >
         <div class="textcenter mar">
             <h1 style="font-size: 2.3rem; padding-bottom: 35px;"><span class="bluetext">NexsoWeb.com</span> — продвигаем ваш бизнес в интернете<br> быстро и недорого!</h1>
             <p style="color: #909090;">Вы сможете решить все свои задачи благодаря созданию сайта:</p>
@@ -137,7 +137,7 @@
         </div>
     </section>
 
-    <section class="global faq">
+    <section class="global faq" id="faq">
         <div class="" style="margin-top: 200px; margin-bottom: 60px;">
             <h2 class="textcenter" style="font-size: 2.25rem; font-weight: 400;">Часто задаваемые вопросы при разработке сайта в <br><span class="bluetext">NexsoWeb.com</span></h2>
         </div>
@@ -194,7 +194,7 @@
         </div>
     </section>
 
-    <section class="global reviews">
+    <section class="global reviews" id="reviews">
         <h1 class="textcenter mar" style="font-size: 2.3rem; padding-bottom: 35px;">Отзывы клиентов о работ с Нексо</h1>
         <div class="reviewscontainer">
 
@@ -285,7 +285,7 @@
         </div>
 
 
-        <div class="" style="margin: auto; margin-top: 200px; margin-bottom: 100px; display: flex; justify-content: center;">
+        <div class="" style="margin: auto; margin-top: 200px; margin-bottom: 100px; display: flex; justify-content: center;" id="contact">
             <div class="contactblock">
                 <p class="contacttitle">Контакты</p>
                 <p class="contactsubtitle">Мы готовы ответить на Ваши вопросы <span style="color: #0369D9; ">7 дней в неделю</span></p>
