--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="titlecontainer">
                 <h1 class="title">Сайты, которые приносят прибыль</h1>
                 <p class="podtitle">Решения для Вашего бизнеса по низким ценам ценам</p>
-                <button class="btnpresent">Подобрать сайт</button>
+                <a href="#contact"><button class="btnpresent">Подобрать сайт</button></a>
             </div>
             <div class="">
                 <img src="./image/iphone.png" alt="" class="phoneimg">
@@ -50,7 +50,7 @@
                     <p class="cardcontentname">Лендинг</p>
                     <div class="greenline"></div>
                     <p class="sale">14 999 ₽\<span class="oldsale">20 000 ₽</span></p>
-                    <button class="cardbut">Подробнее</button>
+                    <a href="#contact"><button class="cardbut">Подробнее</button></a>
                     <p style="color: #909090; font-size: 13px; font-weight: 400;">Получайте прибыль от продвижения конкретных услуг или товаров на одной странице</p>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                     <p class="cardcontentname">Бизнес</p>
                     <div class="greenline"></div>
                     <p class="sale">50 000 ₽</p>
-                    <button class="cardbut">Подробнее</button>
+                    <a href="#contact"><button class="cardbut">Подробнее</button></a>
                     <p style="color: #909090; font-size: 13px; font-weight: 400;">Решайте все задачи вашего бизнеса с помощью многостраничного сайта.</p>
                 </div>
             </div>
@@ -81,24 +81,24 @@
                 <div class="excard-text">
                 <a href="">Электроинструменты</a>
                 </div>
-                <img src="./image/saw.png" alt="" style="margin-left: 90px;">
+                <img src="./image/saw.png" alt="" class="saw">
             </div>
 
             <div class="excard">
                 <div class="excard-text">
                 <a href="">Доставка еды</a>
                 </div>
-                <img src="./image/pizza.png" alt="" style="margin-top: 50px;">
+                <img src="./image/pizza.png" alt="" class="pizza">
             </div>
 
             <div class="excard">
                 <div class="excard-text">
                 <a href="">Средства защиты</a>
                 </div>
-                <img src="./image/doctors.png" alt="" style="margin-left: 60px; margin-top: 12px;">
+                <img src="./image/doctors.png" alt="" class="doctors">
             </div>
         </div>
-        <button class="greenb center">Заказать сайт</button>
+        <a href="#contact"><button class="greenb center">Заказать сайт</button></a>
     </section>
 
     <section class="global" >
@@ -165,7 +165,7 @@
 
     </section>
 
-    <section class="global reviews" style="background-color: #f5f5f5;">
+    <section class="global reviews" style="background-color: #f5f5f5;" id="reviews">
         <h1 class="textcenter mar" style="font-size: 2.3rem; padding-bottom: 35px;">Отзывы клиентов о работ с Нексо</h1>
         <div class="reviewscontainer">
 
@@ -256,7 +256,7 @@
         </div>
 
 
-        <div class="contactsect">
+        <div class="contactsect" id="contact">
             <div class="contactblock">
                 <p class="contacttitle">Контакты</p>
                 <p class="contactsubtitle">Мы готовы ответить на Ваши вопросы <span class="bluetext" >7 дней в неделю</span></p>
